# rust_on_flutter

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/rust_on_flutter/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bindings.dart
rust/: Cargo.toml  bindings.h  cbindgen.toml  makefile
rust/src/: lib.rs  main.rs
test/: widget_test.dart
