[package]
name = "librustnet"
version = "0.1.0"
authors = ["chenlong <chenlong@toptower-iot.com>"]
edition = "2018"

[profile.release]
lto = true

[lib]
name = "rustnet"
crate-type = ["staticlib", "cdylib"]

[dependencies]
android_logger = "0.9"
jni = { version = "0.10.2", default-features = false }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
